# pocket_diffusion

./: .copilot_session_summary.md  .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  PAPER_SUBMISSION_CHECKLIST.md  README.md  REPRODUCIBILITY_Q1.md  display_results.sh  run_paper_training.sh  run_training_experiments.sh  todo.json
artifacts/: README.md
configs/: ablation_delta_table.json  artifact_audit_gate_report.json  artifact_audit_report.json  artifact_retention_manifest.json  atom_to_pocket_cross_attention_velocity_head_plan.json  candidate_metric_coverage.json  correlation_table.json  docking_input_preparation_report.json  docking_input_preparation_report_test.json  docking_input_preparation_report_validation.json  drug_level_claim_contract.json  drug_metric_artifact_manifest.json  f21_sweep_result_table.json  f22_training_plan.json  f31_ablation_bundle.json  f32_diagnostics_package.json  f41_multi_seed_summary.json  f42_method_comparison.json  f42_method_comparison_plan.json  f51_reproducibility_manifest.json  f52_paper_narrative.json  flow_canonical_config_family.json  flow_matching_claim_contract.json  flow_matching_experiment.json  flow_vs_denoising_binding_analysis.json  gnina_protocol.json  ligand_pairwise_geometry_message_passing_plan.json  method_comparison_summary.json  multi_seed_drug_level_summary.json  paper_claim_contract.json  q14_final_smoke_conditioned_denoising.json  q14_final_smoke_conditioned_denoising.research.json  q14_final_smoke_de_novo_full_flow.json  q14_final_smoke_de_novo_full_flow.research.json  q14_leakage_calibration.json  (+154 more)
(+1624 files in other folders)
